# rust-crud

./: .gitignore  Cargo.toml  package-lock.json
client/: Cargo.toml  README.md
client/src/: api.rs  main.rs  model.rs
server/: Cargo.toml
server/src/: main.rs  model.rs
ts-client/: package-lock.json  package.json
ts-client/model/: index.ts
ts-client/pages/: index.tsx  restaurant_form.tsx  review_form.tsx  show_content.tsx  user_form.tsx
ts-client/pages/api/: index.ts
ts-client/util/: index.ts
