[workspace]
members = [
    "client",
    "server",
]
resolver = "2"

[workspace.dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.1"
serde = "1.0.193"
tokio = { version = "1.32.0", features = ["full"] }
futures = "0.3.28"
serde_json = "1.0.66"

[workspace.dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]
