[package]
name = "rust-crud"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version="0.20", features=["csr"] }
serde = "1.0.188"
futures = "0.3.28"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0.68"