[package]
name = "server"
version = "0.1.0"
edition = "2021"
include = ["src/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb.workspace = true
actix-web.workspace = true
serde.workspace = true
actix-cors.workspace = true
